# test-rust-axum

./: Cargo.toml  Dockerfile  configuration.yaml
configuration/: base.yaml
migrations/: 20230224081913_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs
src/routes/: health_checck.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
