[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Tomaz Canabrava <tomaz.canabrava@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.6" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = {version = "0.13"}
hyper = { version = "0.14", features = ["full"] }
http = { version = "0.2" }
reqwest = {version = "0.11"}
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1"}
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3",  features = ["registry", "env-filter"]  }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = {version = "0.4", features = ["full"] }
tower-request-id = { version = "0.2" }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
once_cell = { version = "1.0"}
